Fix spacing

--- a/assets/_sass/_blog.scss
+++ b/assets/_sass/_blog.scss
@@ -13,6 +13,7 @@
     text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.10);
   }
 }
+
 .page-container {
   margin: 2rem;
   display: grid;
@@ -31,4 +32,9 @@
     margin: 3rem;
     grid-template-columns: repeat(3, 1fr);
   }
+}
+
+p, ul {
+  margin-block-start: 1em;
+  margin-block-end: 1em;
 }
