--- a/assets/_sass/_home.scss
+++ b/assets/_sass/_home.scss
@@ -106,7 +106,7 @@
   .description {
     visibility: hidden;
     position: absolute;
-    top: 13%;
+    top: 10%;
     text-align: center;
     margin: 0rem 1rem 1rem 1rem;
   }
